# The verifiers taskset package prime-rl trains on.
#
# Install into prime-rl's environment (uv workspace member or plain
# `uv pip install -e`), then reference it from the TOML:
#
#   [[orchestrator.train.env]]
#   id = "zenml-pipeline-writing"
#
# verifiers resolves the id to this package and loads the single
# Taskset subclass exported via __all__.
[project]
name = "zenml-pipeline-writing"
version = "0.1.0"
description = "ZenML pipeline-writing RL taskset (verifiers v1), scored inside ZenML sandboxes."
requires-python = ">=3.12"
dependencies = [
    # verifiers is supplied by prime-rl's environment (vendored
    # submodule); zenml provides the sandbox the runtime executes in.
    "zenml>=0.96.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zenml_pipeline_writing"]
